fix registo avaliação e get avaliação aluno done
